Update .env.example to increase maximum file size and PDF page limits

--- a/.env.example
+++ b/.env.example
@@ -21,9 +21,9 @@ STREAMLIT_HOST_PORT=8501
 APP_TITLE=PaddleOCR-VL Document Parser
 APP_DESCRIPTION=Upload PDF or image files to convert them to Markdown using PaddleOCR-VL with vLLM backend
 # Maximum file size in MB
-MAX_FILE_SIZE_MB=50
+MAX_FILE_SIZE_MB=99
 # Maximum number of pages to process for PDFs
-MAX_PDF_PAGES=50
+MAX_PDF_PAGES=250
 
 # =============================================================================
 # PaddleOCR-VL API Configuration
@@ -59,7 +59,8 @@ API_IMAGE_TAG_SUFFIX=latest-offline
 VLM_IMAGE_TAG_SUFFIX=latest-offline
 # GPU device ID to use (0, 1, etc.)
 GPU_DEVICE_ID=0
-# vLLM memory settings are configured in vllm_config.yaml (not here)
+
+# NOTE: vLLM memory settings are configured in vllm_config.yaml (not here)
 
 # =============================================================================
 # Logging Configuration
