Add MAX_PARALLEL_PAGES configuration for improved PDF processing performance

--- a/.env.example
+++ b/.env.example
@@ -24,6 +24,8 @@ APP_DESCRIPTION=Upload PDF or image files to convert them to Markdown using Padd
 MAX_FILE_SIZE_MB=99
 # Maximum number of pages to process for PDFs
 MAX_PDF_PAGES=250
+# Maximum parallel pages to process simultaneously (increase for faster processing, decrease if API overloads)
+MAX_PARALLEL_PAGES=8
 
 # =============================================================================
 # PaddleOCR-VL API Configuration
@@ -67,3 +69,4 @@ GPU_DEVICE_ID=0
 # =============================================================================
 LOG_LEVEL=INFO
 LOG_FILE=/app/logs/app.log
+
