Add MAX_PREVIEW_PAGES configuration to limit document preview rendering

--- a/.env.example
+++ b/.env.example
@@ -26,6 +26,8 @@ MAX_FILE_SIZE_MB=99
 MAX_PDF_PAGES=250
 # Maximum parallel pages to process simultaneously (increase for faster processing, decrease if API overloads)
 MAX_PARALLEL_PAGES=8
+# Maximum pages to show in preview tab (prevents browser slowdown with large documents)
+MAX_PREVIEW_PAGES=10
 
 # =============================================================================
 # PaddleOCR-VL API Configuration
