--- a/compose.yaml
+++ b/compose.yaml
@@ -39,6 +39,7 @@ services:
       - MAX_FILE_SIZE_MB=${MAX_FILE_SIZE_MB:-50}
       - MAX_PDF_PAGES=${MAX_PDF_PAGES:-50}
       - MAX_PARALLEL_PAGES=${MAX_PARALLEL_PAGES:-8}
+      - MAX_PREVIEW_PAGES=${MAX_PREVIEW_PAGES:-10}
       # Processing Options
       - USE_DOC_ORIENTATION_CLASSIFY=${USE_DOC_ORIENTATION_CLASSIFY:-false}
       - USE_DOC_UNWARPING=${USE_DOC_UNWARPING:-false}
