Add PAGES_PER_CHUNK configuration for optimized GPU batching in PDF processing

--- a/.env.example
+++ b/.env.example
@@ -29,6 +29,9 @@ MAX_PDF_PAGES=350
 MAX_PARALLEL_PAGES=8
 # Maximum pages to show in preview tab (prevents browser slowdown with large documents)
 MAX_PREVIEW_PAGES=10
+# Pages per chunk sent to API (higher = better GPU batching, but more memory usage)
+# Optimal values: 5-10 depending on page complexity and GPU VRAM
+PAGES_PER_CHUNK=8
 
 # =============================================================================
 # PaddleOCR-VL API Configuration
