Update PDF processing configurations for optimized performance and GPU utilization

--- a/.env.example
+++ b/.env.example
@@ -25,13 +25,16 @@ APP_DESCRIPTION=Upload PDF or image files to convert them to Markdown using Padd
 MAX_FILE_SIZE_MB=99
 # Maximum number of pages to process for PDFs
 MAX_PDF_PAGES=350
-# Maximum parallel pages to process simultaneously (increase for faster processing, decrease if API overloads)
-MAX_PARALLEL_PAGES=8
+# Maximum parallel chunk workers (keep low - API may serialize requests internally)
+# Higher values don't help if API processes one request at a time
+MAX_PARALLEL_PAGES=2
 # Maximum pages to show in preview tab (prevents browser slowdown with large documents)
 MAX_PREVIEW_PAGES=10
-# Pages per chunk sent to API (higher = better GPU batching, but more memory usage)
-# Optimal values: 5-10 depending on page complexity and GPU VRAM
-PAGES_PER_CHUNK=8
+# Pages per chunk sent to API - THIS IS THE KEY GPU OPTIMIZATION SETTING!
+# Higher = better GPU utilization (vLLM batches all pages in chunk together)
+# Lower = less VRAM usage but worse GPU utilization
+# Recommended: 10-20 for 24GB VRAM, 5-10 for 12GB VRAM, 3-5 for 8GB VRAM
+PAGES_PER_CHUNK=16
 
 # =============================================================================
 # PaddleOCR-VL API Configuration
