Update PDF processing configurations for improved performance and GPU utilization

--- a/.env.example
+++ b/.env.example
@@ -27,14 +27,14 @@ MAX_FILE_SIZE_MB=99
 MAX_PDF_PAGES=350
 # Maximum parallel chunk workers (keep low - API may serialize requests internally)
 # Higher values don't help if API processes one request at a time
-MAX_PARALLEL_PAGES=2
+MAX_PARALLEL_PAGES=16
 # Maximum pages to show in preview tab (prevents browser slowdown with large documents)
 MAX_PREVIEW_PAGES=10
-# Pages per chunk sent to API - THIS IS THE KEY GPU OPTIMIZATION SETTING!
+# Pages per chunk sent to API - KEEP THIS SETTING BELOW 10!
 # Higher = better GPU utilization (vLLM batches all pages in chunk together)
 # Lower = less VRAM usage but worse GPU utilization
-# Recommended: 10-20 for 24GB VRAM, 5-10 for 12GB VRAM, 3-5 for 8GB VRAM
-PAGES_PER_CHUNK=16
+# Recommended: 5-10
+PAGES_PER_CHUNK=8
 
 # =============================================================================
 # PaddleOCR-VL API Configuration
