Adjust PDF processing configurations for improved performance and memory utilization

--- a/.env.example
+++ b/.env.example
@@ -27,13 +27,13 @@ MAX_FILE_SIZE_MB=99
 MAX_PDF_PAGES=350
 # Maximum parallel chunk workers (keep low - API may serialize requests internally)
 # Higher values don't help if API processes one request at a time
-MAX_PARALLEL_PAGES=16
+MAX_PARALLEL_PAGES=8
 # Maximum pages to show in preview tab (prevents browser slowdown with large documents)
 MAX_PREVIEW_PAGES=10
 # Pages per chunk sent to API - KEEP THIS SETTING BELOW 10!
 # Higher = better GPU utilization (vLLM batches all pages in chunk together)
 # Lower = less VRAM usage but worse GPU utilization
-# Recommended: 5-10
+# Recommended: 5-10 (default 8, maximum 10)
 PAGES_PER_CHUNK=8
 
 # =============================================================================
