--- a/vllm_config.yaml
+++ b/vllm_config.yaml
@@ -4,7 +4,7 @@
 # Common fixes for "No available memory for cache blocks":
 # 1. Increase gpu_memory_utilization (up to 0.98)
 # 2. Reduce max_num_seqs (try 32 or 16)
-# 3. Reduce max_model_len (try 2048)
+# 3. Reduce max_model_len (try 4096)
 # 4. Enable enforce_eager (disable CUDA graphs)
 #
 # NOTE: vLLM uses underscores in YAML config keys, not hyphens!
@@ -21,8 +21,8 @@ max_num_seqs: 64
 
 # Maximum context length
 # PaddleOCR-VL supports up to 32768 tokens
-# 8192 is good for most documents
-max_model_len: 16384
+# 8192 is good for most documents (single-page)
+max_model_len: 32768
 
 # Disable CUDA graphs (uses less memory but slower)
 # Keep false for best performance if you have enough VRAM
@@ -31,7 +31,7 @@ enforce_eager: false
 # Maximum batched tokens - controls throughput
 # Higher = more efficient GPU utilization
 # Should be >= max_model_len for optimal batching
-max_num_batched_tokens: 65536
+max_num_batched_tokens: 131072
 
 # Enable chunked prefill for better memory efficiency with long contexts
 enable_chunked_prefill: true
